@@ -1,3 +1,10 @@
+2005-03-22  John Luke  <john.luke@gmail.com>
+
+	* Internal/Project/Project/DotNetProject.cs: Release configuration
+	should not enable debugmode
+	* Internal/Project/Combine/CombineConfiguration.cs: no need to have
+	configurationname on the Entry node, build=true by default
+
 2005-03-20  Todd Berman  <tberman@off.net>
 
 	* Gui/Pads/FileScout/FileScout.cs: dispatch to the gui thread.
